--- a/style.css
+++ b/style.css
@@ -67,3 +67,25 @@ h1:hover {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
+
+.text_move {
+  animation: ease-in infinite, move 1.8s ease-in infinite;
+}
+
+@keyframes move {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(0px, -22px);
+  }
+  50% {
+    transform: translate(0px, -22px);
+  }
+  60% {
+    transform: translate(0px, -22px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
