--- a/style.css
+++ b/style.css
@@ -20,13 +20,9 @@ h1:hover {
   color: black;
 }
 
-.link {
-  display: flex;
-  justify-content: center;
-}
 
 #source-link {
-  bottom: 60px;
+  margin-bottom: 1em;
 }
 
 #source-link > i {
@@ -57,15 +53,11 @@ h1:hover {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.meta-link > i, .meta-link > span {
-  height: 20px;
-  line-height: 20px;
-}
-
 .meta-link > span {
   color: white;
   font-family: "Rubik", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
+  font-size: clamp(1rem, 1vw, 1rem);
 }
 
 .text_move {
@@ -77,13 +69,13 @@ h1:hover {
     transform: translate(0px, 0px);
   }
   40% {
-    transform: translate(0px, -22px);
+    transform: translate(0px, -32px);
   }
   50% {
-    transform: translate(0px, -22px);
+    transform: translate(0px, -32px);
   }
   60% {
-    transform: translate(0px, -22px);
+    transform: translate(0px, -32px);
   }
   100% {
     transform: translate(0px, 0px);
