--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   background-color: black;
-  margin: 0rem;
   overflow: hidden;
 }
 
@@ -18,46 +23,6 @@ h1 {
 h1:hover {
   background-color: white;
   color: black;
-}
-
-
-#source-link {
-  margin-bottom: 1em;
-}
-
-#source-link > i {
-  color: rgb(94, 106, 210);
-}
-
-.meta-link {
-  align-items: center;
-  backdrop-filter: blur(3px);
-  background-color: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 6px;
-  bottom: 10px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-  cursor: pointer;  
-  display: inline-flex;
-  gap: 5px;
-  left: 10px;
-  padding: 10px 20px;
-  position: fixed;
-  text-decoration: none;
-  transition: background-color 400ms, border-color 400ms;
-  z-index: 10000;
-}
-
-.meta-link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.meta-link > span {
-  color: white;
-  font-family: "Rubik", sans-serif;
-  font-weight: 300;
-  font-size: clamp(1rem, 1vw, 1rem);
 }
 
 .text_move {
